src/app/domains/todo-lists/components/todo-lists-item/todo-lists-item.component.scss
ul {
    margin-block-start: 1em;
    margin-block-end: 1em;
    margin-inline-start: 0;
    margin-inline-end: 0;
    padding-inline-start: 40px;
}

.list {
    margin: 20px 0;
    padding: 0;
    position: relative;

    &-todo {
        margin: 0 -20px;
        padding: 0;
        width: 100%;
        list-style-type: none;

        &-item {
            padding: 15px 20px 5px;
            width: 100%;
            flex-direction: row;
            border-bottom: 1px solid #ededed;

            &-inprogress {
                display: flex;
            
                &-complete {
                    display: inline-block;
                    justify-content: flex-start;
                    padding: 0 5px;
                }

                &-edit {
                    display: inline-block;
                    flex: 2 1;
                    padding-left: 20px;

                    input {
                        font-size: 18px;
                        width: 100%;
                        border: none;
                        padding: 3px 0;
                        color: #323232;
                        outline: none;
                    }
                }

                &-remove {
                    display: inline;
                    justify-content: flex-end;
                    padding: 0;
                    margin: -5px 0 0 10px;
                }
            }

            &-completed {
                display: flex;

                &-complete {
                    display: inline-block;
                    padding: 0 5px;
                }

                &-label {
                    display: inline-block;
                    flex: 2 1;
                    padding-left: 20px;

                    p {
                        font-size: 18px;
                        width: 100%;
                        border: none;
                        padding: 3px 0;
                        color: #323232;
                        outline: none;
                    }
                }
            }

            &-removed {
                display: flex;

                &-restore {
                    display: inline-block;
                    padding: 0 5px;
                }

                &-label {
                    display: inline-block;
                    flex: 2 1;
                    padding-left: 20px;

                    p {
                        font-size: 18px;
                        width: 100%;
                        border: none;
                        padding: 3px 0;
                        color: #323232;
                        outline: none;
                    }
                }
            }
        }

        &-newitem {
            margin: 0;
            padding: 15px 20px 5px;
            width: 100%;
            flex-direction: row;
            border-bottom: 1px solid #ededed;

            &-create {
                display: flex;

                &-icon {
                    display: inline-block;
                    padding: 0 5px;
                }

                &-input {
                    display: inline-block;
                    flex: 2 1;
                    padding-left: 20px;

                    input {
                        padding: 0;
                        font-size: 18px;
                        width: 100%;
                        border: none;
                        padding: 3px 0;
                        color: #323232;
                        outline: none;
                    }
                    
                }
            }
        }
    }
}

.remove-button:hover {
    cursor: pointer;
    circle {
        fill: red;
    }
    rect {
        fill: white;
    }
}

.add-button:hover {
    cursor: pointer;
    circle {
        fill: #3d82eb;
    }
    rect {
        fill: white;
    }
}

.complete-button:hover {
    cursor: pointer;
    circle {
        fill: #7c7c7c;
    }
}

